After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 125421 - problem when inserting a line in a freezed pane
problem when inserting a line in a freezed pane
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Sheet Objects
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-10-24 16:58 UTC by Frederic Parrenin
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Frederic Parrenin 2003-10-24 16:58:54 UTC
Open a sheet.
Go to A10
Freeze panes
Go to A1
Insert new line
=> new line is not visible

However, when you insert a new line in e.g. A2, the upper pane get one more
line.
Comment 1 Jody Goldberg 2003-10-25 06:29:27 UTC
tuned to behave as you suggest.
Comment 2 Frederic Parrenin 2003-10-26 13:29:22 UTC
Jody, thanks for the quick fixe.

However, I did not suggest anything. What have you done exactly ?
By the way, I find that adding a line in the upper pane when you
insert a line is not a good solution. A freezed pane is a freezed pane...
Comment 3 Jody Goldberg 2003-10-27 16:49:43 UTC
I tuned the handling of inserting a col/row just before the first
visible frozen col/row.  Previously it would not become visible, which
was a bit confusing, it now becomes visible.  I don't see any ideal
solutions to this action, either we proide little if any feedback that
something has changed, or we modify a frozen region.  The later seems
more consistent.